src/test/deca/syntax/valid/test_dir/added/parser/mult_expr_second_deriv.deca
{
	5 * 2; 5 * 2 * --"Hello World !"; !!x.p() * !!x.p(); 50.0 * !!x.p() * --(x * 50);
}
