src/test/deca/syntax/invalid/parser/oracle/instanceof_with_wrong_right_param.deca
{
    x instanceof println("Hello World !");
}